# mai_course_oop

./: README.md
oop_exercise_01/: CMakeLists.txt  test.sh
oop_exercise_01/src/: main.cpp  modulo.cpp  modulo.hpp
oop_exercise_01/tests/: test_01.ans.txt  test_01.txt  test_02.ans.txt  test_02.txt  test_03.ans.txt  test_03.txt
oop_exercise_02/: CMakeLists.txt
oop_exercise_02/src/: main.cpp  tests.cpp  time_point.cpp  time_point.hpp
oop_exercise_02/tests/: test_01.txt  test_02.txt
oop_exercise_03/: CMakeLists.txt
oop_exercise_03/src/: figure.cpp  figure.hpp  main.cpp
oop_exercise_03/tests/: test_01.txt  test_02.txt  test_03.txt
oop_exercise_04/: CMakeLists.txt
oop_exercise_04/src/: figure.hpp  main.cpp
oop_exercise_04/tests/: test_01.txt  test_02.txt  test_03.txt
oop_exercise_06/: CMakeLists.txt
oop_exercise_06/src/: allocator.hpp  main.cpp  vector.hpp
oop_exercise_06/tests/: test_01.txt  test_02.txt
oop_exercise_06/vector-testing/: test.cpp  vector-testing.vcxproj
oop_exercise_07/: CMakeLists.txt
oop_exercise_07/src/: figure.cpp  figure.hpp  main.cpp  point.cpp  point.hpp
oop_exercise_07/tests/: test_01.txt  test_02.txt
oop_exercise_08/: CMakeLists.txt
oop_exercise_08/src/: figure.cpp  figure.hpp  figure_factory.cpp  figure_factory.hpp  main.cpp
oop_exercise_08/tests/: test_01.txt  test_02.txt
